--- a/Customer-Order-Dashboard-frontend/.env
+++ b/Customer-Order-Dashboard-frontend/.env
@@ -1,6 +1,8 @@
 # API Configuration
-REACT_APP_API_BASE_URL=http://localhost:5000
-REACT_APP_API_VERSION=v1
+VITE_API_BASE_URL=http://localhost:5000
 
-# Environment
-REACT_APP_ENV=development
+# Development
+VITE_NODE_ENV=development
+
+# Optional: Enable API logging in development
+VITE_DEBUG_API=true
